2006-06-27  Sven Neumann  <sven@gimp.org>

	Applied patch from Zbigniew Chyla (bug 345982):

	* app/widgets/gimpactiongroup.c (gimp_action_group_add_string_actions)
	strip translation context from translated entries[i].label.

	* app/tools/gimpmagnifytool.c: added translation context.

2006-06-27  Sven Neumann  <sven@gimp.org>

	Applied patch from Zbigniew Chyla (bug 345982):

	* app/tools/gimptransformtool.[ch]: added undo_desc field for
	storing undo string and use that, not tool_info->blurb.

	* app/tools/gimpfliptool.c
	* app/tools/gimpperspectivetool.c
	* app/tools/gimprotatetool.c
	* app/tools/gimpscaletool.c
	* app/tools/gimpsheartool.c: set undo_desc.

2006-06-27  Sven Neumann  <sven@gimp.org>

	* modules/cdisplay_proof.c: use the GimpColorRenderingIntent enum
	from libgimpconfig instead of duplicating it.

2006-06-27  Sven Neumann  <sven@gimp.org>

	Changes based on a patch from Zbigniew Chyla (bug #345982):
	
	* libgimpbase/gimputils.c: strip translation context from enum
	descriptions.

	* libgimpbase/gimpbaseenums.h
	* libgimpconfig/gimpcolorconfig-enums.h: added translation context
	to some enums.

	* libgimpbase/gimpbaseenums.c
	* libgimpconfig/gimpcolorconfig-enums.c: regenerated.

2006-06-27  Sven Neumann  <sven@gimp.org>

	* app/core/gimpunit.c: applied patch from Zbigniew Chyla that adds
	translation context to some problematic strings (bug #345982).

2006-06-27  Sven Neumann  <sven@gimp.org>

	* app/core/gimpchannel-select.c
	* app/core/gimpdrawable-bucket-fill.c
	* app/core/gimpdrawable-transform.c
	* app/core/gimpimage-crop.c
	* app/dialogs/image-scale-dialog.c
	* app/tools/gimpforegroundselecttool.c
	* app/tools/gimpfreeselecttool.c
	* app/tools/gimpfuzzyselecttool.c
	* app/tools/gimpmovetool.c
	* plug-ins/gfig/gfig-dialog.c: applied patch from Zbigniew Chyla
	that adds translation context to some problematic strings
	(bug #345982).

2006-06-27  Sven Neumann  <sven@gimp.org>

	* plug-ins/pygimp/gimpui.py: applied patch from Joao S. O. Bueno