@@ -1,3 +1,9 @@
+2006-06-28  Sven Neumann  <sven@gimp.org>
+
+	* app/core/gimpstrokedesc.[ch]: removed broken implementation of
+	gimp_stroke_desc_duplicate() and reimplement it by overriding the
+	duplicate() method of the GimpConfig interface.
+
 2006-06-27  Sven Neumann  <sven@gimp.org>
 
 	Applied patch from Zbigniew Chyla (bug 345982):
